Code written but not working...

--- a/Mode_tests.ipynb
+++ b/Mode_tests.ipynb
@@ -12,17 +12,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <function Lumerical.__del__ at 0x000001E1FE9997B8>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Program Files\\Lumerical\\v212\\api\\python\\lumapi.py\", line 1174, in __del__\n",
+      "    close(self.handle)\n",
+      "AttributeError: 'MODE' object has no attribute 'handle'\n",
+      "Exception ignored in: <function Lumerical.__del__ at 0x000001E1FE9997B8>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Program Files\\Lumerical\\v212\\api\\python\\lumapi.py\", line 1174, in __del__\n",
+      "    close(self.handle)\n",
+      "AttributeError: 'MODE' object has no attribute 'handle'\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from mode_solutions import Solver\n",
     "from waveguide import Waveguide\n",
-    "from pulse import Pulse\n",
+    "import pandas as pd\n",
     "from propagator import Propagator\n",
-    "from scipy.constants import c"
+    "from scipy.constants import c\n"
    ]
   },
   {
@@ -41,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,8 +84,8 @@
     "# }\n",
     "\n",
     "start_wavelength = 1.555e-6\n",
-    "stop_wavelength = 1.5575e-6\n",
-    "points = 3\n",
+    "stop_wavelength = 1.560e-6\n",
+    "points = 11\n",
     "step = (stop_wavelength-start_wavelength) / (points-1)\n",
     "\n",
     "general_params = {\n",
@@ -420,53 +437,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initialising MODE instance...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception ignored in: <function Lumerical.__del__ at 0x000001E1511BB7B8>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Program Files\\Lumerical\\v212\\api\\python\\lumapi.py\", line 1174, in __del__\n",
-      "    close(self.handle)\n",
-      "AttributeError: 'MODE' object has no attribute 'handle'\n",
-      "Exception ignored in: <function Lumerical.__del__ at 0x000001E1511BB7B8>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Program Files\\Lumerical\\v212\\api\\python\\lumapi.py\", line 1174, in __del__\n",
-      "    close(self.handle)\n",
-      "AttributeError: 'MODE' object has no attribute 'handle'\n",
-      "Exception ignored in: <function Lumerical.__del__ at 0x000001E1511BB7B8>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Program Files\\Lumerical\\v212\\api\\python\\lumapi.py\", line 1174, in __del__\n",
-      "    close(self.handle)\n",
-      "AttributeError: 'MODE' object has no attribute 'handle'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inputting simulation parameters...\n",
-      "Fitting material parameters...\n",
-      "Initialisation complete\n",
-      "Getting mode info...\n",
-      "Performing frequency sweep\n",
-      "Sweep complete\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "extra_params = ('TE',False,False)\n",
-    "wg = Waveguide(material_parameters,general_params,*extra_params)\n",
+    "# wg = Waveguide(material_parameters,general_params,*extra_params)\n",
     "\n",
     "\n",
     "pump_params = {'mode_idx':1,\n",
@@ -504,16 +480,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0 1.680144467018391\n",
-      "1.0 1.2695758634180594\n",
-      "1.0502227209673147e-28 2.2239349008569103 0.7554827555298539\n"
+      "223 53\n",
+      "(223, 53) (223, 53)\n",
+      "223 53\n",
+      "(223, 53) (223, 53)\n",
+      "0.9999999999999996 1.3127173951167022\n",
+      "223 53\n",
+      "(223, 53) (223, 53)\n",
+      "223 53\n",
+      "(223, 53) (223, 53)\n",
+      "1.0 1.0482952308759887\n",
+      "223 53\n",
+      "(223, 53) (223, 53)\n",
+      "223 53\n",
+      "(223, 53) (223, 53)\n",
+      "1.0477194176416746e-28 1.8062963046071 0.7267453250989406\n"
      ]
     }
    ],
@@ -605,7 +593,62 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Calculate phase and compare to data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_struct = pd.read_csv('PhaseData.csv')\n",
+    "power_array = data_struct['power'] #Inferred on chip power\n",
+    "exp_phase = data_struct['data'] #Spillitting ratio change - equivalent to phase at pi/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pump_params = {'mode_idx':1,\n",
+    "               'lambda0':start_wavelength,\n",
+    "               'dt': 6.18e-12,\n",
+    "               'power':20/50e-6}\n",
+    "\n",
+    "signal_params = {'mode_idx':0,\n",
+    "               'lambda0':stop_wavelength,\n",
+    "               'dt':3.87e-12,\n",
+    "               'power':0.5/50e-6}\n",
+    "\n",
+    "n2 = 2.4e-19\n",
+    "length = 0.03 \n",
+    "\n",
+    "\n",
+    "    \n",
+    "Prop = Propagator(wg,\n",
+    "                  pump_params,\n",
+    "                  signal_params,\n",
+    "                  length,\n",
+    "                  n2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "''"
+   ]
   }
  ],
  "metadata": {
